--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    text-align: center;
     flex: 1 1 0;
 }
 
@@ -42,7 +43,6 @@ text-align: center;
     flex: 1 1 0;
     text-align: center;
     vertical-align: middle;
-    display: flex;
     margin-top: 0px;
     align-items: center;
 }
@@ -51,7 +51,6 @@ text-align: center;
     flex: 1 1 0;
     text-align: center;
     vertical-align: middle;
-    display: flex;
     margin-top: 0px;
     align-items: center;
     width: 100%;
